fix footer width on mobile devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,4 +66,6 @@ background-repeat: no-repeat;
 .footer {
 background-color: #ECEDF7;
 padding-top: 15px;
+min-width: 1200px;
+width: 100%;
 }
