--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -98,8 +98,8 @@ padding-left: 30px;
 .bs-masthead .container.lower .col-xs-4.right{
 padding-right: 35px;
 }
-.bs-masthead.home .footer .row.footer {
-padding-left: 20px;
+.bs-masthead .footer .row.footer {
+padding-left: 55px;
 }
 .container.footer {
 padding-bottom: 25px;
